k8s/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voltrico-api-gateway
spec:
  selector:
    app: voltrico-api-gateway
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
