k8s/base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations: {}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - voltrico.local
      secretName: voltrico-tls
  rules:
    - host: voltrico.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: voltrico-api-gateway
                port:
                  number: 3001
